# compute-sharding

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/llama-stage-backend/: Cargo.toml  README.md  build.rs
crates/llama-stage-backend/src/: lib.rs
crates/stage-forward-lab/: Cargo.toml
crates/stage-forward-lab/src/: gguf.rs  lib.rs  prompt_suite.rs  prompting.rs  quants.rs  real_forward.rs  real_math.rs  tokenizer.rs
docs/: architecture.md  model-sharding-gguf.md  results.md
src/: download.rs  gateway.rs  main.rs  models.rs  orchestrator.rs  process.rs
src/tui/: globe.rs  mod.rs  theme.rs  worldmap.rs
