[package]
name = "compute-sharding"
version = "0.1.0"
edition = "2021"
description = "Compute's open sharded inference CLI for two-stage llama.cpp/GGUF experiments"
license = "MIT"
repository = "https://github.com/Compute-Network/compute-sharding"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
