[package]
name = "compute-sharding"
version = "0.1.0"
edition = "2021"
description = "Compute's open sharded inference CLI for two-stage llama.cpp/GGUF experiments"
license = "MIT"
repository = "https://github.com/Compute-Network/compute-sharding"

[workspace]
members = [
    ".",
    "crates/llama-stage-backend",
    "crates/stage-forward-lab",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Compute-Network/compute-sharding"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
