[package]
name = "llama-stage-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
stage-forward-lab = { path = "../stage-forward-lab" }
libloading = "0.8"
tracing = { workspace = true }

[build-dependencies]
cmake = "0.1"
