[package]
name = "stage-forward-lab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
thiserror = { workspace = true }
dirs = "6"
half = "2"
rayon = "1"

[dev-dependencies]
tempfile = "3"
